// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`formatDocumentationForFlagParameters > boolean > hidden optional boolean flag > no ANSI color 1`] = `
[
  "-h --help  Print help information and exit",
  "   --      All subsequent inputs should be interpreted as arguments",
]
`;

exports[`formatDocumentationForFlagParameters > boolean > hidden optional boolean flag > with ANSI color 1`] = `
[
  "[1m-h[22m [1m--help[22m  [;;3mPrint help information and exit[;;;23m",
  "[1m[22m   [1m--[22m      [;;3mAll subsequent inputs should be interpreted as arguments[;;;23m",
]
`;

exports[`formatDocumentationForFlagParameters > boolean > hidden optional boolean flag, help all > no ANSI color 1`] = `
[
  "   [--optionalBoolean/--noOptionalBoolean]  optional boolean flag",
  "-h  --help                                  Print help information and exit",
  "    --                                      All subsequent inputs should be interpreted as arguments",
]
`;

exports[`formatDocumentationForFlagParameters > boolean > hidden optional boolean flag, help all > with ANSI color 1`] = `
[
  "[2m[22m   [2m[--optionalBoolean/--noOptionalBoolean][22m  [2;3moptional boolean flag[22;23m",
  "[1m-h[22m [1m --help[22m                                  [;;3mPrint help information and exit[;;;23m",
  "[1m[22m   [1m --[22m                                      [;;3mAll subsequent inputs should be interpreted as arguments[;;;23m",
]
`;

exports[`formatDocumentationForFlagParameters > boolean > optional boolean flag > no ANSI color 1`] = `
[
  "   [--optionalBoolean/--noOptionalBoolean]  optional boolean flag",
  "-h  --help                                  Print help information and exit",
  "    --                                      All subsequent inputs should be interpreted as arguments",
]
`;

exports[`formatDocumentationForFlagParameters > boolean > optional boolean flag > with ANSI color 1`] = `
[
  "[1m[22m   [1m[--optionalBoolean/--noOptionalBoolean][22m  [;;3moptional boolean flag[;;;23m",
  "[1m-h[22m [1m --help[22m                                  [;;3mPrint help information and exit[;;;23m",
  "[1m[22m   [1m --[22m                                      [;;3mAll subsequent inputs should be interpreted as arguments[;;;23m",
]
`;

exports[`formatDocumentationForFlagParameters > boolean > required boolean flag > no ANSI color 1`] = `
[
  "   --requiredBoolean/--noRequiredBoolean  required boolean flag",
  "-h --help                                 Print help information and exit",
  "   --                                     All subsequent inputs should be interpreted as arguments",
]
`;

exports[`formatDocumentationForFlagParameters > boolean > required boolean flag > with ANSI color 1`] = `
[
  "[1m[22m   [1m--requiredBoolean/--noRequiredBoolean[22m  [;;3mrequired boolean flag[;;;23m",
  "[1m-h[22m [1m--help[22m                                 [;;3mPrint help information and exit[;;;23m",
  "[1m[22m   [1m--[22m                                     [;;3mAll subsequent inputs should be interpreted as arguments[;;;23m",
]
`;

exports[`formatDocumentationForFlagParameters > boolean > required boolean flag with default=false > no ANSI color 1`] = `
[
  "   [--requiredBoolean]  required boolean flag                                    [default = false]",
  "-h  --help              Print help information and exit",
  "    --                  All subsequent inputs should be interpreted as arguments",
]
`;

exports[`formatDocumentationForFlagParameters > boolean > required boolean flag with default=false > with ANSI color 1`] = `
[
  "[1m[22m   [1m[--requiredBoolean][22m  [;;3mrequired boolean flag[;;;23m                                    [[2mdefault =[22m false]",
  "[1m-h[22m [1m --help[22m              [;;3mPrint help information and exit[;;;23m",
  "[1m[22m   [1m --[22m                  [;;3mAll subsequent inputs should be interpreted as arguments[;;;23m",
]
`;

exports[`formatDocumentationForFlagParameters > boolean > required boolean flag with default=true > no ANSI color 1`] = `
[
  "   [--requiredBoolean/--noRequiredBoolean]  required boolean flag                                    [default = true]",
  "-h  --help                                  Print help information and exit",
  "    --                                      All subsequent inputs should be interpreted as arguments",
]
`;

exports[`formatDocumentationForFlagParameters > boolean > required boolean flag with default=true > with ANSI color 1`] = `
[
  "[1m[22m   [1m[--requiredBoolean/--noRequiredBoolean][22m  [;;3mrequired boolean flag[;;;23m                                    [[2mdefault =[22m true]",
  "[1m-h[22m [1m --help[22m                                  [;;3mPrint help information and exit[;;;23m",
  "[1m[22m   [1m --[22m                                      [;;3mAll subsequent inputs should be interpreted as arguments[;;;23m",
]
`;

exports[`formatDocumentationForFlagParameters > boolean > required boolean flag with default=true and withNegated=false > no ANSI color 1`] = `
[
  "   [--requiredBoolean]  required boolean flag                                    [default = true]",
  "-h  --help              Print help information and exit",
  "    --                  All subsequent inputs should be interpreted as arguments",
]
`;

exports[`formatDocumentationForFlagParameters > boolean > required boolean flag with default=true and withNegated=false > with ANSI color 1`] = `
[
  "[1m[22m   [1m[--requiredBoolean][22m  [;;3mrequired boolean flag[;;;23m                                    [[2mdefault =[22m true]",
  "[1m-h[22m [1m --help[22m              [;;3mPrint help information and exit[;;;23m",
  "[1m[22m   [1m --[22m                  [;;3mAll subsequent inputs should be interpreted as arguments[;;;23m",
]
`;

exports[`formatDocumentationForFlagParameters > enum > optional enum flag > no ANSI color 1`] = `
[
  "   [--optionalEnum]  optional enum flag                                       [a|b|c]",
  "-h  --help           Print help information and exit",
  "    --               All subsequent inputs should be interpreted as arguments",
]
`;

exports[`formatDocumentationForFlagParameters > enum > optional enum flag > with ANSI color 1`] = `
[
  "[1m[22m   [1m[--optionalEnum][22m  [;;3moptional enum flag[;;;23m                                       [a|b|c]",
  "[1m-h[22m [1m --help[22m           [;;3mPrint help information and exit[;;;23m",
  "[1m[22m   [1m --[22m               [;;3mAll subsequent inputs should be interpreted as arguments[;;;23m",
]
`;

exports[`formatDocumentationForFlagParameters > enum > optional enum flag with default > no ANSI color 1`] = `
[
  "   [--optionalEnum]  optional enum flag                                       [a|b|c, default = b]",
  "-h  --help           Print help information and exit",
  "    --               All subsequent inputs should be interpreted as arguments",
]
`;

exports[`formatDocumentationForFlagParameters > enum > optional enum flag with default > with ANSI color 1`] = `
[
  "[1m[22m   [1m[--optionalEnum][22m  [;;3moptional enum flag[;;;23m                                       [a|b|c, [2mdefault =[22m b]",
  "[1m-h[22m [1m --help[22m           [;;3mPrint help information and exit[;;;23m",
  "[1m[22m   [1m --[22m               [;;3mAll subsequent inputs should be interpreted as arguments[;;;23m",
]
`;

exports[`formatDocumentationForFlagParameters > enum > required enum flag > no ANSI color 1`] = `
[
  "   --requiredEnum  required enum flag                                       [a|b|c]",
  "-h --help          Print help information and exit",
  "   --              All subsequent inputs should be interpreted as arguments",
]
`;

exports[`formatDocumentationForFlagParameters > enum > required enum flag > with ANSI color 1`] = `
[
  "[1m[22m   [1m--requiredEnum[22m  [;;3mrequired enum flag[;;;23m                                       [a|b|c]",
  "[1m-h[22m [1m--help[22m          [;;3mPrint help information and exit[;;;23m",
  "[1m[22m   [1m--[22m              [;;3mAll subsequent inputs should be interpreted as arguments[;;;23m",
]
`;

exports[`formatDocumentationForFlagParameters > enum > required enum flag with default > no ANSI color 1`] = `
[
  "   [--requiredEnum]  required enum flag                                       [a|b|c, default = b]",
  "-h  --help           Print help information and exit",
  "    --               All subsequent inputs should be interpreted as arguments",
]
`;

exports[`formatDocumentationForFlagParameters > enum > required enum flag with default > with ANSI color 1`] = `
[
  "[1m[22m   [1m[--requiredEnum][22m  [;;3mrequired enum flag[;;;23m                                       [a|b|c, [2mdefault =[22m b]",
  "[1m-h[22m [1m --help[22m           [;;3mPrint help information and exit[;;;23m",
  "[1m[22m   [1m --[22m               [;;3mAll subsequent inputs should be interpreted as arguments[;;;23m",
]
`;

exports[`formatDocumentationForFlagParameters > enum > variadic enum flag with separator and default > no ANSI color 1`] = `
[
  "   [--format]  Output format(s)                                         [json|xml|yaml, default = json+yaml, separator = +]",
  "-h  --help     Print help information and exit",
  "    --         All subsequent inputs should be interpreted as arguments",
]
`;

exports[`formatDocumentationForFlagParameters > enum > variadic enum flag with separator and default > with ANSI color 1`] = `
[
  "[1m[22m   [1m[--format][22m  [;;3mOutput format(s)[;;;23m                                         [json|xml|yaml, [2mdefault =[22m json+yaml, [2mseparator =[22m +]",
  "[1m-h[22m [1m --help[22m     [;;3mPrint help information and exit[;;;23m",
  "[1m[22m   [1m --[22m         [;;3mAll subsequent inputs should be interpreted as arguments[;;;23m",
]
`;

exports[`formatDocumentationForFlagParameters > enum > variadic enum flag without separator and with default > no ANSI color 1`] = `
[
  "   [--format]  Output format(s)                                         [json|xml|yaml, default = json yaml]",
  "-h  --help     Print help information and exit",
  "    --         All subsequent inputs should be interpreted as arguments",
]
`;

exports[`formatDocumentationForFlagParameters > enum > variadic enum flag without separator and with default > with ANSI color 1`] = `
[
  "[1m[22m   [1m[--format][22m  [;;3mOutput format(s)[;;;23m                                         [json|xml|yaml, [2mdefault =[22m json yaml]",
  "[1m-h[22m [1m --help[22m     [;;3mPrint help information and exit[;;;23m",
  "[1m[22m   [1m --[22m         [;;3mAll subsequent inputs should be interpreted as arguments[;;;23m",
]
`;

exports[`formatDocumentationForFlagParameters > no flags > no ANSI color 1`] = `
[
  "-h --help  Print help information and exit",
  "   --      All subsequent inputs should be interpreted as arguments",
]
`;

exports[`formatDocumentationForFlagParameters > no flags > with ANSI color 1`] = `
[
  "[1m-h[22m [1m--help[22m  [;;3mPrint help information and exit[;;;23m",
  "[1m[22m   [1m--[22m      [;;3mAll subsequent inputs should be interpreted as arguments[;;;23m",
]
`;

exports[`formatDocumentationForFlagParameters > parsed > flag with nonstandard character > no ANSI color 1`] = `
[
  "   --a.b.c_10  required parsed flag",
  "-h --help      Print help information and exit",
  "   --          All subsequent inputs should be interpreted as arguments",
]
`;

exports[`formatDocumentationForFlagParameters > parsed > flag with nonstandard character > with ANSI color 1`] = `
[
  "[1m[22m   [1m--a.b.c_10[22m  [;;3mrequired parsed flag[;;;23m",
  "[1m-h[22m [1m--help[22m      [;;3mPrint help information and exit[;;;23m",
  "[1m[22m   [1m--[22m          [;;3mAll subsequent inputs should be interpreted as arguments[;;;23m",
]
`;

exports[`formatDocumentationForFlagParameters > parsed > multipart flag > no ANSI color 1`] = `
[
  "   --multi.part  required parsed flag",
  "-h --help        Print help information and exit",
  "   --            All subsequent inputs should be interpreted as arguments",
]
`;

exports[`formatDocumentationForFlagParameters > parsed > multipart flag > with ANSI color 1`] = `
[
  "[1m[22m   [1m--multi.part[22m  [;;3mrequired parsed flag[;;;23m",
  "[1m-h[22m [1m--help[22m        [;;3mPrint help information and exit[;;;23m",
  "[1m[22m   [1m--[22m            [;;3mAll subsequent inputs should be interpreted as arguments[;;;23m",
]
`;

exports[`formatDocumentationForFlagParameters > parsed > multiple parsed flags > no ANSI color 1`] = `
[
  "   --requiredParsed                        required parsed flag",
  "   --requiredParsedWithLongerName          required parsed flag with longer name",
  "   --required-parsed-with-kebab-case-name  required parsed flag with kebab-case name",
  "-h --help                                  Print help information and exit",
  "   --                                      All subsequent inputs should be interpreted as arguments",
]
`;

exports[`formatDocumentationForFlagParameters > parsed > multiple parsed flags > with ANSI color 1`] = `
[
  "[1m[22m   [1m--requiredParsed[22m                        [;;3mrequired parsed flag[;;;23m",
  "[1m[22m   [1m--requiredParsedWithLongerName[22m          [;;3mrequired parsed flag with longer name[;;;23m",
  "[1m[22m   [1m--required-parsed-with-kebab-case-name[22m  [;;3mrequired parsed flag with kebab-case name[;;;23m",
  "[1m-h[22m [1m--help[22m                                  [;;3mPrint help information and exit[;;;23m",
  "[1m[22m   [1m--[22m                                      [;;3mAll subsequent inputs should be interpreted as arguments[;;;23m",
]
`;

exports[`formatDocumentationForFlagParameters > parsed > optional array parsed flag > no ANSI color 1`] = `
[
  "   [--optionalArrayParsed]  optional array parsed flag",
  "-h  --help                  Print help information and exit",
  "    --                      All subsequent inputs should be interpreted as arguments",
]
`;

exports[`formatDocumentationForFlagParameters > parsed > optional array parsed flag > with ANSI color 1`] = `
[
  "[1m[22m   [1m[--optionalArrayParsed][22m  [;;3moptional array parsed flag[;;;23m",
  "[1m-h[22m [1m --help[22m                  [;;3mPrint help information and exit[;;;23m",
  "[1m[22m   [1m --[22m                      [;;3mAll subsequent inputs should be interpreted as arguments[;;;23m",
]
`;

exports[`formatDocumentationForFlagParameters > parsed > optional parsed flag > no ANSI color 1`] = `
[
  "   [--optionalParsed]  optional parsed flag",
  "-h  --help             Print help information and exit",
  "    --                 All subsequent inputs should be interpreted as arguments",
]
`;

exports[`formatDocumentationForFlagParameters > parsed > optional parsed flag > with ANSI color 1`] = `
[
  "[1m[22m   [1m[--optionalParsed][22m  [;;3moptional parsed flag[;;;23m",
  "[1m-h[22m [1m --help[22m             [;;3mPrint help information and exit[;;;23m",
  "[1m[22m   [1m --[22m                 [;;3mAll subsequent inputs should be interpreted as arguments[;;;23m",
]
`;

exports[`formatDocumentationForFlagParameters > parsed > optional parsed flag with alias > no ANSI color 1`] = `
[
  "-p [--optionalParsed]  optional parsed flag",
  "-h  --help             Print help information and exit",
  "    --                 All subsequent inputs should be interpreted as arguments",
]
`;

exports[`formatDocumentationForFlagParameters > parsed > optional parsed flag with alias > with ANSI color 1`] = `
[
  "[1m-p[22m [1m[--optionalParsed][22m  [;;3moptional parsed flag[;;;23m",
  "[1m-h[22m [1m --help[22m             [;;3mPrint help information and exit[;;;23m",
  "[1m[22m   [1m --[22m                 [;;3mAll subsequent inputs should be interpreted as arguments[;;;23m",
]
`;

exports[`formatDocumentationForFlagParameters > parsed > optional variadic parsed flag > no ANSI color 1`] = `
[
  "   [--optionalVariadicParsed]...  optional variadic parsed flag",
  "-h  --help                        Print help information and exit",
  "    --                            All subsequent inputs should be interpreted as arguments",
]
`;

exports[`formatDocumentationForFlagParameters > parsed > optional variadic parsed flag > with ANSI color 1`] = `
[
  "[1m[22m   [1m[--optionalVariadicParsed]...[22m  [;;3moptional variadic parsed flag[;;;23m",
  "[1m-h[22m [1m --help[22m                        [;;3mPrint help information and exit[;;;23m",
  "[1m[22m   [1m --[22m                            [;;3mAll subsequent inputs should be interpreted as arguments[;;;23m",
]
`;

exports[`formatDocumentationForFlagParameters > parsed > optional variadic parsed flag with default > no ANSI color 1`] = `
[
  "   [--variadicParsed]...  optional variadic parsed flag with default               [default = foo bar]",
  "-h  --help                Print help information and exit",
  "    --                    All subsequent inputs should be interpreted as arguments",
]
`;

exports[`formatDocumentationForFlagParameters > parsed > optional variadic parsed flag with default > with ANSI color 1`] = `
[
  "[1m[22m   [1m[--variadicParsed]...[22m  [;;3moptional variadic parsed flag with default[;;;23m               [[2mdefault =[22m foo bar]",
  "[1m-h[22m [1m --help[22m                [;;3mPrint help information and exit[;;;23m",
  "[1m[22m   [1m --[22m                    [;;3mAll subsequent inputs should be interpreted as arguments[;;;23m",
]
`;

exports[`formatDocumentationForFlagParameters > parsed > required array parsed flag > no ANSI color 1`] = `
[
  "   --requiredArrayParsed  required array parsed flag",
  "-h --help                 Print help information and exit",
  "   --                     All subsequent inputs should be interpreted as arguments",
]
`;

exports[`formatDocumentationForFlagParameters > parsed > required array parsed flag > with ANSI color 1`] = `
[
  "[1m[22m   [1m--requiredArrayParsed[22m  [;;3mrequired array parsed flag[;;;23m",
  "[1m-h[22m [1m--help[22m                 [;;3mPrint help information and exit[;;;23m",
  "[1m[22m   [1m--[22m                     [;;3mAll subsequent inputs should be interpreted as arguments[;;;23m",
]
`;

exports[`formatDocumentationForFlagParameters > parsed > required parsed flag > no ANSI color 1`] = `
[
  "   --requiredParsed  required parsed flag",
  "-h --help            Print help information and exit",
  "   --                All subsequent inputs should be interpreted as arguments",
]
`;

exports[`formatDocumentationForFlagParameters > parsed > required parsed flag > with ANSI color 1`] = `
[
  "[1m[22m   [1m--requiredParsed[22m  [;;3mrequired parsed flag[;;;23m",
  "[1m-h[22m [1m--help[22m            [;;3mPrint help information and exit[;;;23m",
  "[1m[22m   [1m--[22m                [;;3mAll subsequent inputs should be interpreted as arguments[;;;23m",
]
`;

exports[`formatDocumentationForFlagParameters > parsed > required parsed flag with alias > no ANSI color 1`] = `
[
  "-p --requiredParsed  required parsed flag",
  "-h --help            Print help information and exit",
  "   --                All subsequent inputs should be interpreted as arguments",
]
`;

exports[`formatDocumentationForFlagParameters > parsed > required parsed flag with alias > with ANSI color 1`] = `
[
  "[1m-p[22m [1m--requiredParsed[22m  [;;3mrequired parsed flag[;;;23m",
  "[1m-h[22m [1m--help[22m            [;;3mPrint help information and exit[;;;23m",
  "[1m[22m   [1m--[22m                [;;3mAll subsequent inputs should be interpreted as arguments[;;;23m",
]
`;

exports[`formatDocumentationForFlagParameters > parsed > required parsed flag with default > no ANSI color 1`] = `
[
  "   [--requiredParsed]  required parsed flag                                     [default = ""]",
  "-h  --help             Print help information and exit",
  "    --                 All subsequent inputs should be interpreted as arguments",
]
`;

exports[`formatDocumentationForFlagParameters > parsed > required parsed flag with default > with ANSI color 1`] = `
[
  "[1m[22m   [1m[--requiredParsed][22m  [;;3mrequired parsed flag[;;;23m                                     [[2mdefault =[22m ""]",
  "[1m-h[22m [1m --help[22m             [;;3mPrint help information and exit[;;;23m",
  "[1m[22m   [1m --[22m                 [;;3mAll subsequent inputs should be interpreted as arguments[;;;23m",
]
`;

exports[`formatDocumentationForFlagParameters > parsed > required parsed flag with default [hidden] > no ANSI color 1`] = `
[
  "-h --help  Print help information and exit",
  "   --      All subsequent inputs should be interpreted as arguments",
]
`;

exports[`formatDocumentationForFlagParameters > parsed > required parsed flag with default [hidden] > with ANSI color 1`] = `
[
  "[1m-h[22m [1m--help[22m  [;;3mPrint help information and exit[;;;23m",
  "[1m[22m   [1m--[22m      [;;3mAll subsequent inputs should be interpreted as arguments[;;;23m",
]
`;

exports[`formatDocumentationForFlagParameters > parsed > required parsed flag with default [hidden], hide all > no ANSI color 1`] = `
[
  "   [--requiredParsed]  required parsed flag                                     [default = 100]",
  "-h  --help             Print help information and exit",
  "    --                 All subsequent inputs should be interpreted as arguments",
]
`;

exports[`formatDocumentationForFlagParameters > parsed > required parsed flag with default [hidden], hide all > with ANSI color 1`] = `
[
  "[2m[22m   [2m[--requiredParsed][22m  [2;3mrequired parsed flag[22;23m                                     [[2mdefault =[22m 100]",
  "[1m-h[22m [1m --help[22m             [;;3mPrint help information and exit[;;;23m",
  "[1m[22m   [1m --[22m                 [;;3mAll subsequent inputs should be interpreted as arguments[;;;23m",
]
`;

exports[`formatDocumentationForFlagParameters > parsed > required parsed flag with default and alias > no ANSI color 1`] = `
[
  "-p [--requiredParsed]  required parsed flag                                     [default = 100]",
  "-h  --help             Print help information and exit",
  "    --                 All subsequent inputs should be interpreted as arguments",
]
`;

exports[`formatDocumentationForFlagParameters > parsed > required parsed flag with default and alias > with ANSI color 1`] = `
[
  "[1m-p[22m [1m[--requiredParsed][22m  [;;3mrequired parsed flag[;;;23m                                     [[2mdefault =[22m 100]",
  "[1m-h[22m [1m --help[22m             [;;3mPrint help information and exit[;;;23m",
  "[1m[22m   [1m --[22m                 [;;3mAll subsequent inputs should be interpreted as arguments[;;;23m",
]
`;

exports[`formatDocumentationForFlagParameters > parsed > required variadic parsed flag > no ANSI color 1`] = `
[
  "   --requiredVariadicParsed...  required variadic parsed flag",
  "-h --help                       Print help information and exit",
  "   --                           All subsequent inputs should be interpreted as arguments",
]
`;

exports[`formatDocumentationForFlagParameters > parsed > required variadic parsed flag > with ANSI color 1`] = `
[
  "[1m[22m   [1m--requiredVariadicParsed...[22m  [;;3mrequired variadic parsed flag[;;;23m",
  "[1m-h[22m [1m--help[22m                       [;;3mPrint help information and exit[;;;23m",
  "[1m[22m   [1m--[22m                           [;;3mAll subsequent inputs should be interpreted as arguments[;;;23m",
]
`;

exports[`formatDocumentationForFlagParameters > parsed > required variadic parsed flag with default (long) > no ANSI color 1`] = `
[
  "   [--variadicParsed]...  required variadic parsed flag with long default          [default = one two three four five]",
  "-h  --help                Print help information and exit",
  "    --                    All subsequent inputs should be interpreted as arguments",
]
`;

exports[`formatDocumentationForFlagParameters > parsed > required variadic parsed flag with default (long) > with ANSI color 1`] = `
[
  "[1m[22m   [1m[--variadicParsed]...[22m  [;;3mrequired variadic parsed flag with long default[;;;23m          [[2mdefault =[22m one two three four five]",
  "[1m-h[22m [1m --help[22m                [;;3mPrint help information and exit[;;;23m",
  "[1m[22m   [1m --[22m                    [;;3mAll subsequent inputs should be interpreted as arguments[;;;23m",
]
`;

exports[`formatDocumentationForFlagParameters > parsed > required variadic parsed flag with empty default > no ANSI color 1`] = `
[
  "   [--variadicParsed]...  required variadic parsed flag with empty default         [default = []]",
  "-h  --help                Print help information and exit",
  "    --                    All subsequent inputs should be interpreted as arguments",
]
`;

exports[`formatDocumentationForFlagParameters > parsed > required variadic parsed flag with empty default > with ANSI color 1`] = `
[
  "[1m[22m   [1m[--variadicParsed]...[22m  [;;3mrequired variadic parsed flag with empty default[;;;23m         [[2mdefault =[22m []]",
  "[1m-h[22m [1m --help[22m                [;;3mPrint help information and exit[;;;23m",
  "[1m[22m   [1m --[22m                    [;;3mAll subsequent inputs should be interpreted as arguments[;;;23m",
]
`;

exports[`formatDocumentationForFlagParameters > parsed > variadic parsed flag with separator > no ANSI color 1`] = `
[
  "   --variadicParsed...  variadic parsed flag with separator                      [separator = ,]",
  "-h --help               Print help information and exit",
  "   --                   All subsequent inputs should be interpreted as arguments",
]
`;

exports[`formatDocumentationForFlagParameters > parsed > variadic parsed flag with separator > with ANSI color 1`] = `
[
  "[1m[22m   [1m--variadicParsed...[22m  [;;3mvariadic parsed flag with separator[;;;23m                      [[2mseparator =[22m ,]",
  "[1m-h[22m [1m--help[22m               [;;3mPrint help information and exit[;;;23m",
  "[1m[22m   [1m--[22m                   [;;3mAll subsequent inputs should be interpreted as arguments[;;;23m",
]
`;

exports[`formatDocumentationForFlagParameters > parsed > variadic parsed flag with separator and default > no ANSI color 1`] = `
[
  "   [--variadicParsed]...  variadic parsed flag with separator and default          [default = json+xml, separator = +]",
  "-h  --help                Print help information and exit",
  "    --                    All subsequent inputs should be interpreted as arguments",
]
`;

exports[`formatDocumentationForFlagParameters > parsed > variadic parsed flag with separator and default > with ANSI color 1`] = `
[
  "[1m[22m   [1m[--variadicParsed]...[22m  [;;3mvariadic parsed flag with separator and default[;;;23m          [[2mdefault =[22m json+xml, [2mseparator =[22m +]",
  "[1m-h[22m [1m --help[22m                [;;3mPrint help information and exit[;;;23m",
  "[1m[22m   [1m --[22m                    [;;3mAll subsequent inputs should be interpreted as arguments[;;;23m",
]
`;
